//protocol= 706;
option java_package = "com.chuangyou.common.protobuf.pb.skill";
option java_outer_classname = "SkillListMsgProto";

//技能数据
message SkillListMsg {
	repeated int32 skillId =1; //已经学习了的技能ID
}